--- a/style.css
+++ b/style.css
@@ -1,96 +1,201 @@
-*{
-	box-sizing: border-box;
-	
+/* Base Styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
-body
-
-{
-	font-family: Helvetica;
+.row {
+  width: 100%;
 }
-p {
-	
-	 margin-left: 15px;
-  margin-right: 15px;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  height:150px;
+h1 {
+	margin-top: 30px;
+  margin-bottom: 45px;
+  text-align: center;
+  font-size:26.25px;
+}
+p{
+	width: 95%;
+	margin-right: auto;
+	margin-left: auto;
+	padding:10px;
+	font-size: 15px;
   overflow: auto;
 }
-h1
-{
-	
-	margin-top: 30px;
-  margin-bottom: 50px;
-  text-align: center;
 
-	
-}
-section {
-  display: block;
-  border: 1px solid black;
-  margin: 10px;
-  height: auto;
-  background-color: orange ;
+#Chicken {
+	background-color: lightcoral;
+	position: relative;
+	left:65%;
+	width:35%;
+	padding:5px;
+	border: 1px solid black;
+	text-align: center;
+	font-size: 18.75px;
 
 }
-h2{
-  float: right;
-  width: 30%;
-  margin-top: 0px;
-  font-size: 125%;
-  text-align: center;
-  
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
+#Beef {
+	background-color: #A52A2A;
+	color:white;
+	position: relative;
+	left:65%;
+	width:35%;
+	padding:5px;
+	border: 1px solid black;
+	text-align: center;
+	font-size: 18.75px;
 }
-#french{
-	background-color: Cyan;
+#Sushi {
+	background-color: khaki;
+	position: relative;	
+	left:65%;
+	width:35%;
+	padding:5px;
+	border: 1px solid black;
+	text-align: center;
+	font-size: 18.75px;
 }
-#Ham{
-	background-color:red;
-}
-#wings{
-	background-color: violet;
-}
-.col-lg-4,.col-md-6, .col-md-12, .col-sm-12 {
-    background-color: white;
+
+/* Desktop view */
+@media (min-width: 992px){
+	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    border: 1px solid black;
+    margin-left: 17px;
+    background-color: orange;
+
+
   }
-
-
-
-
-.row{
-	width: 100%;
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 31.3%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
-@media(min-width: 992px){
-	
-	
-	.col-lg-4{
-		width:33.3%;
-	}
-	
 
+/* Tablet view */
+@media (min-width: 768px) and (max-width: 991px) {
+	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+    border: 1px solid black;
+     margin-left: 30px;
+     margin-bottom: 30px;
+     background-color: orange;
+   
+
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 44.5%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 92%;
+  }
 }
-@media(min-width: 768px) and (max-width: 991px){
-	
-	
-	
-	.col-md-6{
-		width:50%;
-	}
-	
-    .col-md-12{
-    	width: 100%;
-    }
-}
-@media(max-width: 767px){
-	
-	
-    .col-sm-12{
-    	width: 100%;
-    }
+/* Mobile View */
+@media (max-width: 767px){
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+    border: 1px solid black;
+    margin-left: 17px;
+    margin-bottom: 10px;
+    background-color: orange;
+ 
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 95%;
+  }
 }
